# easyai

./: PYPI_README.md  README.md  pyproject.toml  update_docs.py
.github/workflows/: ci.yml
ask_ai/: __init__.py  base.py  cli.py  config.py  exceptions.py  media.py
ask_ai/providers/: __init__.py  anthropic_provider.py  azure_provider.py  google_provider.py  groq_provider.py  openai_provider.py  openrouter_provider.py
docs/: README_ar.md  README_es.md  README_fa.md  README_ja.md  README_ru.md  README_tr.md  README_zh.md
examples/: example_usage.py
tests/: test_core.py
